--- a/web/contents/docs/others/example/index.mdx
+++ b/web/contents/docs/others/example/index.mdx
@@ -8,11 +8,17 @@ import ApiClient from "hmm-api"; // import hmm-api
 export const api = new ApiClient({
   showGlobalToast: false,
   parseErrorResponse: (err) => {
-    // parse err according to your err response from server
+    //  here backend error look like this {
+    //   title: "Product Limit Exceeded",
+    //   desc: "You can only add up to 3 products.",
+    //   error: "Product limit exceeded",
+    //   showErrorToast: true,
+    // } parse err according to your err response from server
+
     toast({
       variant: "destructive",
-      title: err?.error?.title || "Fetch failed",
-      description: err?.error?.desc || "Page not found",
+      title: err?.title || "Fetch failed",
+      description: err?.desc || "Page not found",
     });
     return;
   },
